DynamicPropertiesCollapse样式 fix

--- a/src/components/CompactTable/index.less
+++ b/src/components/CompactTable/index.less
@@ -26,7 +26,7 @@
     }
     .tfooter{
         display: flex;
-        margin-top: @margin-min;
+        // margin-top: @margin-min;
         font-size: 12px;
         &>div{
             flex:1
